Fixed contact alignment

--- a/assets/contact.css
+++ b/assets/contact.css
@@ -62,7 +62,9 @@
     }
 
     .contact-icons{
-        justify-content: center;
+        justify-content: start;
+        max-width: 170px;
+        margin: 0 auto;
     }
 }
 
